exports[`Dialog renders correctly 1`] = `
<div
  class="iEDbaR">
  <div />
  <div>
    <div>
      <div />
      <button>
        ×
      </button>
    </div>
    <div />
    <div>
      <button
        class="itQmfd">
        Cancel
      </button>
      <button
        class="itQmfd">
        Submit
      </button>
    </div>
  </div>
</div>
`;

exports[`Dialog renders modal 1`] = `
<div
  class="iEDbaR">
  <div />
  <div>
    <div>
      <div />
    </div>
    <div />
    <div>
      <button
        class="itQmfd">
        Cancel
      </button>
      <button
        class="itQmfd">
        Submit
      </button>
    </div>
  </div>
</div>
`;

exports[`Dialog renders with props 1`] = `
<div
  class="jmrWOQ"
  open="">
  <div />
  <div>
    <div>
      <div>
        Dialog Title
      </div>
      <button>
        ×
      </button>
    </div>
    <div>
      Hello Dialog!
    </div>
    <div>
      <button
        class="itQmfd">
        Cancel
      </button>
      <button
        class="itQmfd">
        Submit
      </button>
    </div>
  </div>
</div>
`;
